--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,12 +1,14 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/PingPong/Maps/PingPongMap.PingPongMap
+GameDefaultMap=/Game/PingPong/Maps/EntryMap.EntryMap
 
 
 EditorStartupMap=/Game/PingPong/Maps/PingPongMap.PingPongMap
 GlobalDefaultGameMode=/Game/PingPong/BP/BP_PingPongGameModeBase.BP_PingPongGameModeBase_C
 GameInstanceClass=/Script/Engine.PlatformGameInstance
+TransitionMap=/Game/PingPong/Maps/TransitionMap.TransitionMap
+ServerDefaultMap=/Game/PingPong/Maps/PingPongMap.PingPongMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
