--- a/PingPong.uproject
+++ b/PingPong.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.27",
+	"EngineAssociation": "{C59E36DC-40DB-0541-4E1B-4E819548B9A9}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
